=========================================
= CHANGES BETWEEN COQ V8.6 AND COQ V8.7 =
=========================================

* Ocaml *

Coq is compiled with -safe-string enabled and requires plugins to do
the same. This means that code using `String` in an imperative way
will fail to compile now. They should switch to `Bytes.t`

* ML API *

We renamed the following functions:

  Context.Rel.Declaration.fold   -> Context.Rel.Declaration.fold_constr
  Context.Named.Declaration.fold -> Context.Named.Declaration.fold_constr
  Printer.pr_var_list_decl       -> Printer.pr_compacted_decl
  Printer.pr_var_decl            -> Printer.pr_named_decl
  Nameops.lift_subscript         -> Nameops.increment_subscript

We removed the following functions:

  Termops.compact_named_context_reverse ... practical substitute is Termops.compact_named_context
  Namegen.to_avoid                      ... equivalent substitute is Names.Id.List.mem

We renamed the following modules:

  Context.ListNamed -> Context.Compacted

The following type aliases where removed

  Context.section_context    ... it was just an alias for "Context.Named.t" which is still available

The module Constrarg was merged into Stdarg.

The following types have been moved and modified:

  local_binder -> local_binder_expr
  glob_binder merged with glob_decl

The following constructors have been renamed:

  LocalRawDef -> CLocalDef
  LocalRawAssum -> CLocalAssum
  LocalPattern -> CLocalPattern

In Constrexpr_ops:

  Deprecating abstract_constr_expr in favor of mkCLambdaN, and
  prod_constr_expr in favor of mkCProdN. Note: the first ones were
  interpreting "(x y z:_)" as "(x:_) (y:_) (z:_)" while the second
  ones were preserving the original sharing of the type.

In Nameops:

  The API has been made more uniform. New combinators added in the
  "Name" space name. Function "out_name" now fails with IsAnonymous
  rather than with Failure "Nameops.out_name".

Location handling and AST attributes:
